--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "transmission-react",
+  "homepage": "/transmission/web/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
